<resources>
    <string name="app_name">MadLevel7Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_title">Weclome to the HvA Locations Quest</string>
    <string name="description_home">After pressing start will start the quest. After each question a picture of a HvA building is shown. Go to the building and start the next question. At the end there will be a prize waiting for you</string>
    <string name="start_quiz_btn">START QUEST</string>
    <string name="demo_question">Who is the co-founder of Android</string>
    <string name="confirm_btn">CONFIRM</string>
    <string name="current_page">%d/10</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="reset_btn">RESEST</string>
    <string name="total_good_anwers">you have %d good answers</string>
</resources>